@@ -1,3 +1,9 @@
+2009-05-24 Iuri Fernandes <iurifq@gmail.com>
+* Added link in "apartamento" to "conta"
+* Created show view and controller to "conta"
+* Modified createTables.sql to fit better to the application
+* Adjusted some details in "conta" and "apartamento" models
+
 2009-05-24 Suzana Matos <suzana.mato@gmail.com>
 * Fixed createTable.sql again...
 
